Home en español creado

--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
     </div>
   </header>
   <main>
-    <div class="main-container">
-      <div class="main-text">
+    <div class="main_container">
+      <div class="main_text">
         <h1>Administraciones Valls</h1>
-        <p>Inmobiliaria, Administración de Fincas, Gestión de Alquileres,<br />Departamento Jurídico y Correduría de
-          Seguros</p>
-        <h3>Mallorca</h3>
+        <div class="main_text_button"">
+          <a class=" button" target="_blank" href="https://www.idealista.com/pro/valls-inmobiliaria">ENCUENTRA TU
+          HOGAR</a>
+        </div>
       </div>
     </div>
   </main>
