Creadas resto de páginas y ajustada la navegación entre ellas

--- a/html/departamento-juridico.html
+++ b/html/departamento-juridico.html
@@ -4,14 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="Empresa líder con más de 60 años de experiencia en la gestión integral de fincas, comunidades e inmuebles. Garantizamos un funcionamiento eficiente y sostenible, destacando por nuestra profesionalidad y seriedad. Mejoramos constantemente la calidad de los servicios, asegurando plazos, presupuestos y la satisfacción de los propietarios. Proporcionamos información clara y actualizada sobre el estado económico y el funcionamiento de cada propiedad. Optimize su inversión con nosotros, donde la excelencia y la legalidad se encuentran.">
+  <meta name="description" content="">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
-  <link rel="stylesheet" type="text/css" href="/static/css/home.css">
-  <title>Administraciones Valls | Inicio</title>
+  <title>Administraciones Valls | Departamento Jurídico</title>
 </head>
 
 <body>
@@ -68,22 +66,13 @@
     </div>
   </header>
   <main>
-    <div class="main_container">
-      <div class="main_text">
-        <h1>Administraciones Valls</h1>
-        <div class="main_text_button"">
-          <a class=" button" target="_blank" href="https://www.idealista.com/pro/valls-inmobiliaria">
-          ENCUENTRA TU HOGAR
-          </a>
-        </div>
-      </div>
-    </div>
+    <h1>Departamento Jurídico</h1>
   </main>
 </body>
 <script>
   const lang = document.getElementById('input-lang-en')
   lang.addEventListener('click', () => {
-    window.location.assign('/en')
+    window.location.assign('/en/departamento-juridico')
   })
 </script>
 
