--- a/html/en/index.html
+++ b/html/en/index.html
@@ -30,12 +30,12 @@
       </label>
     </div>
     <div class="nav-links">
-      <a href="#">Home</a>
-      <a href="#">Property Management</a>
-      <a href="#">Rental Management</a>
-      <a href="#">Legal Department</a>
-      <a href="#">Insurance Brokerage</a>
-      <a href="#">Contact</a>
+      <a href="/en/">Home</a>
+      <a href="/en/administracion-fincas">Property Management</a>
+      <a href="/en/gestion-alquileres">Rental Management</a>
+      <a href="/en/departamento-juridico">Legal Department</a>
+      <a href="/en/correduria-seguros">Insurance Brokerage</a>
+      <a href="/en/contacto">Contact</a>
       <div class="select-box">
         <div class="select-box__current" tabindex="1">
           <div class="select-box__value">
