Contenido de administración de fincas y creado el layout

--- a/html/administracion-fincas.html
+++ b/html/administracion-fincas.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/info.css">
   <title>Administraciones Valls | Administración de Fincas</title>
 </head>
 
@@ -65,8 +66,65 @@
       </div>
     </div>
   </header>
-  <main>
-    <h1>Administración de Fincas</h1>
+  <main class="info">
+    <div class="info_content">
+      <h1>Administración de Fincas</h1>
+      <section class="info_section">
+        <div class="info_text">
+          <p>
+            Desde el año 1963 nos dedicamos a administrar y gestionar fincas, comunidades e inmuebles.
+          </p>
+          <p>A lo
+            largo de todos estos años, hemos logrado nuestro objetivo; un perfecto funcionamiento de las comunidades ,
+            su
+            conservación, mantenimiento y reparación de los servicios e instalaciones generales.
+          </p>
+          <p>
+            Por esa razón, una infinidad
+            de comunidades y particulares han depositado su confianza en nosotros, gracias a la profesionalidad y
+            seriedad
+            de
+            nuestro personal y colaboradores.
+          </p>
+        </div>
+        <figure class="info_figure">
+          <img src="/static/img/mallorca_3.jpg" alt="Imagen de Administración de Fincas">
+        </figure>
+      </section>
+      <section>
+        <p>
+          Mejoramos continuamente la calidad de los servicios que recibe su comunidad o propiedad,
+          controlando los trabajos de los proveedores, asegurando el cumplimiento en plazos y en presupuesto y evaluando
+          el
+          nivel de satisfacción de los propietarios. Ponemos a su disposición información clara, simple y actualizada
+          del
+          estado económico de su comunidad o propiedad y del funcionamiento de de sus servicios. Rentabilizamos en
+          beneficio
+          de la propiedad, con criterios profesionales, justos y acordes a la ley.
+        </p>
+        <p>
+          Manteniéndolos para su correcta conservación y adecuación a las normas de seguridad, higiene y
+          funcionamiento en interés de sus moradores. Para ello disponemos de un servicio de mantenimiento 24 horas,
+          todos
+          los días del año.
+        </p>
+        <p>
+          Disponemos de una serie de departamentos que se encargan de proporcionar a nuestros clientes,
+          el asesoramiento y la gestión integral de sus servicios:
+        </p>
+        <ul>
+          <li>Adquisición y legalización del libro de actas en el Registro de la Propiedad.</li>
+          <li>Obtención del CIF de la comunidad.</li>
+          <li>Apertura de la cuenta bancaria con las mejores condiciones del mercado.</li>
+          <li>Redacción de los Estatutos y Normas de Régimen Interior.</li>
+          <li>Confección integral de recibos.</li>
+          <li>Obtención de presupuestos para obras y reparaciones.</li>
+          <li>Seguimiento y control de las mismas y de los proveedores.</li>
+          <li>Redacción y envió a todos los propietarios, del Acta de la Junta y transcripción al libro de Actas.</li>
+          <li>Información permanente a los propietarios de las cuestiones que les afecten.</li>
+        </ul>
+      </section>
+    </div>
   </main>
 </body>
 <script>
