Traducida administración de fincas al inglés

--- a/html/administracion-fincas.html
+++ b/html/administracion-fincas.html
@@ -74,10 +74,10 @@
           <p>
             Desde el año 1963 nos dedicamos a administrar y gestionar fincas, comunidades e inmuebles.
           </p>
-          <p>A lo
-            largo de todos estos años, hemos logrado nuestro objetivo; un perfecto funcionamiento de las comunidades ,
-            su
-            conservación, mantenimiento y reparación de los servicios e instalaciones generales.
+          <p>
+            A lo largo de todos estos años hemos logrado nuestro objetivo: un perfecto funcionamiento de las
+            comunidades,
+            su conservación, mantenimiento y reparación de los servicios e instalaciones generales.
           </p>
           <p>
             Por esa razón, una infinidad
@@ -103,13 +103,13 @@
           de la propiedad, con criterios profesionales, justos y acordes a la ley.
         </p>
         <p>
-          Manteniéndolos para su correcta conservación y adecuación a las normas de seguridad, higiene y
+          Mantenemos las propiedades para su correcta conservación y adecuación a las normas de seguridad, higiene y
           funcionamiento en interés de sus moradores. Para ello disponemos de un servicio de mantenimiento 24 horas,
           todos
           los días del año.
         </p>
         <p>
-          Disponemos de una serie de departamentos que se encargan de proporcionar a nuestros clientes,
+          Disponemos de una serie de departamentos que se encargan de proporcionar a nuestros clientes
           el asesoramiento y la gestión integral de sus servicios:
         </p>
         <ul>
