--- a/html/en/administracion-fincas.html
+++ b/html/en/administracion-fincas.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/info.css">
   <title>Administraciones Valls | Property Management</title>
 </head>
 
@@ -65,8 +66,62 @@
       </div>
     </div>
   </header>
-  <main>
-    <h1>Property Management</h1>
+  <main class="info">
+    <div class="info_content">
+      <h1>Property Management</h1>
+      <section class="info_section">
+        <div class="info_text">
+          <p>
+            Since 1963, we have been dedicated to managing and administering estates, communities, and properties.
+          </p>
+          <p>
+            Throughout all these years, we have achieved our goal: the perfect functioning of communities, their
+            conservation,
+            maintenance, and repair of general services and facilities.
+          </p>
+          <p>
+            For this reason, countless communities and individuals have placed their trust in us, thanks to the
+            professionalism
+            and seriousness of our staff and collaborators.
+          </p>
+        </div>
+        <figure class="info_figure">
+          <img src="/static/img/mallorca_3.jpg" alt="Property Management Image">
+        </figure>
+      </section>
+      <section>
+        <p>
+          We continuously improve the quality of the services your community or property receives, monitoring the work
+          of
+          providers, ensuring compliance with deadlines and budgets, and evaluating the satisfaction level of the
+          owners. We
+          provide clear, simple, and up-to-date information on the economic status of your community or property and the
+          operation of its services. We optimize for the benefit of the property, with professional, fair, and legally
+          compliant criteria.
+        </p>
+        <p>
+          We maintain properties for their proper conservation and compliance with safety, hygiene, and operational
+          standards
+          in the interest of their residents. For this purpose, we have a 24-hour maintenance service, every day of the
+          year.
+        </p>
+        <p>
+          We have a series of departments that are responsible for providing our clients with comprehensive advice and
+          management of their services:
+        </p>
+        <ul>
+          <li>Acquisition and legalization of the minutes book in the Property Registry.</li>
+          <li>Obtaining the community's tax identification number (CIF).</li>
+          <li>Opening a bank account with the best market conditions.</li>
+          <li>Drafting of the Statutes and Internal Rules.</li>
+          <li>Comprehensive preparation of receipts.</li>
+          <li>Obtaining quotes for works and repairs.</li>
+          <li>Monitoring and control of the works and providers.</li>
+          <li>Drafting and sending to all owners, the minutes of the meeting and transcription to the minutes book.</li>
+          <li>Continuous information to owners on matters affecting them.</li>
+        </ul>
+      </section>
+    </div>
   </main>
 </body>
 <script>
