Agregado contenido del resto de páginas en castellano

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/contact.css">
   <title>Administraciones Valls | Contacto</title>
 </head>
 
@@ -65,8 +66,33 @@
       </div>
     </div>
   </header>
-  <main>
+  <main class="contact">
     <h1>Contacto</h1>
+    <section class="contact_content">
+      <div>
+        <h5 class="contact_subtitle">Teléfono</h5>
+        <p>971 721 688</p>
+        <p>651 843 166</p>
+        <p>632 630 314</p>
+      </div>
+      <div>
+        <h5 class="contact_subtitle">Email</h5>
+        <p>info@administracionesvalls.com</p>
+      </div>
+      <div>
+        <h5 class="contact_subtitle">Horario</h5>
+        <p>Lunes, Miercoles y Viernes de 8 a 15 h</p>
+        <p>Martes y Jueves de 8 a 20 h ininterrumpidamente.</p>
+        <p>Horario Julio y Agosto: de Lunes a Viernes de 8 a 15 h.</p>
+      </div>
+      <div>
+        <h5 class="contact_subtitle">Dirección</h5>
+        <p>Bisbe Perelló 3 Bajos, Palma de Mallorca</p>
+      </div>
+    </section>
+    <iframe class="contact_map"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1828.5998769014125!2d2.6542462536577447!3d39.574798923798994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12979253f130e6ad%3A0x3081e36623a1b0e5!2sCarrer%20del%20Bisbe%20Perell%C3%B3%2C%203%2C%20Centre%2C%2007002%20Palma%2C%20Illes%20Balears!5e0!3m2!1ses!2ses!4v1703218676536!5m2!1ses!2ses"
+      style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </main>
 </body>
 <script>
