--- a/html/correduria-seguros.html
+++ b/html/correduria-seguros.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/info.css">
   <title>Administraciones Valls | Correduría de Seguros</title>
 </head>
 
@@ -65,8 +66,29 @@
       </div>
     </div>
   </header>
-  <main>
-    <h1>Correduría de Seguros</h1>
+  <main class="info">
+    <div class="info_content">
+      <h1>Correduría de Seguros</h1>
+      <section class="info_section">
+        <div class="info_text">
+          <p>
+            Realizamos una estimación de los posibles riesgos que podrían afectar a nuestros clientes, determinando los
+            capitales necesarios para cubrirlos.
+          </p>
+          <p>
+            Esta es la mejor manera de llevar a cabo una adecuada previsión contra posibles siniestros, y evitar
+            disminuciones en su patrimonio.
+          </p>
+          <p>
+            Como último paso, en caso de siniestro, asesoramos a nuestros clientes para que sean compensados con una
+            indemnización suficiente y merecida por los daños sufridos.
+          </p>
+        </div>
+        <figure class="info_figure">
+          <img src="/static/img/mallorca_3.jpg" alt="Imagen de Administración de Fincas">
+        </figure>
+      </section>
+    </div>
   </main>
 </body>
 <script>
