--- a/html/departamento-juridico.html
+++ b/html/departamento-juridico.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/info.css">
   <title>Administraciones Valls | Departamento Jurídico</title>
 </head>
 
@@ -65,8 +66,49 @@
       </div>
     </div>
   </header>
-  <main>
-    <h1>Departamento Jurídico</h1>
+  <main class="info">
+    <div class="info_content">
+      <h1>Departamento Jurídico</h1>
+      <section class="info_section">
+        <div class="info_text">
+          <p>
+            La oficina de apoyo jurídico tiene como principales objetivos el asesorar y resolver los procedimientos
+            jurídicos administrativos, así como atender adecuadamente los recursos a que tiene derecho nuestros
+            clientes.
+          </p>
+          <p>
+            Nuestros servicios jurídicos están especializados en ley de arrendamiento urbano, rústico y propiedad
+            horizontal. Nuestro equipo humano y nuestra inequívoca vocación nos permiten ofrecer un asesoramiento
+            integral.
+          </p>
+          <p>
+            Se trata de un servicio con sello propio en el que están representados nuestro compromiso, ante todo con la
+            calidad, el servicio al particular, la ética y la solvencia empresarial.
+          </p>
+        </div>
+        <figure class="info_figure">
+          <img src="/static/img/mallorca_3.jpg" alt="Imagen de Administración de Fincas">
+        </figure>
+      </section>
+      <section>
+        <p>
+          Seguidamente les listamos algunos de nuestros servicios:
+        </p>
+        <ul>
+          <li>Asesoramiento general a empresas y particulares.</li>
+          <li>Redacción y confección de todo tipo de contratos y sus variantes.</li>
+          <li>Operaciones inmobiliarias, compraventas, arrendamientos, operaciones de permuta.</li>
+          <li>Actuaciones ante los Tribunales, reclamaciones de cantidad.</li>
+          <li>Preparación de los expedientes administrativos en que sea parte interesada nuestro cliente.</li>
+          <li>Preparación o supervisión de los documentos contractuales, notariales, precisos en cada caso.</li>
+          <li>Asistencia en el momento de la firma de los documentos notariales.</li>
+          <li>Tramitación de los documentos notariales en Registros de la Propiedad de Baleares.</li>
+          <li>Altas, bajas, modificaciones, actualización en el Catastro.</li>
+          <li>Obtención de certificaciones en la Administraciones Públicas.</li>
+          <li>Obtención de certificaciones y notas simples en los Registros Mercantiles y de la Propiedad.</li>
+        </ul>
+      </section>
+    </div>
   </main>
 </body>
 <script>
