--- a/html/gestion-alquileres.html
+++ b/html/gestion-alquileres.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/info.css">
   <title>Administraciones Valls | Gestión de Alquileres</title>
 </head>
 
@@ -65,8 +66,56 @@
       </div>
     </div>
   </header>
-  <main>
-    <h1>Gestión de Alquileres</h1>
+  <main class="info">
+    <div class="info_content">
+      <h1>Gestión de Alquileres</h1>
+      <section class="info_section">
+        <div class="info_text">
+          <p>
+            Desde Valls Gestión de Alquileres le ofrecemos la posibilidad de obtener los servicios de Administración de
+            todas sus propiedades.
+          </p>
+          <p>
+            Viviendas / Locales / Aparcamientos/ Edificios/ Hoteles/ Naves Industriales.
+          </p>
+          <p>
+            De este modo, nuestra Empresa se encarga de todos los trabajos relacionados con la gestión y
+            administración de sus propiedades alquiladas a terceros.
+          </p>
+        </div>
+        <figure class="info_figure">
+          <img src="/static/img/mallorca_3.jpg" alt="Imagen de Administración de Fincas">
+        </figure>
+      </section>
+      <section>
+        <p>
+          Tareas que se detallan seguidamente:
+        </p>
+        <ul>
+          <li>Asesoramiento Personalizado para poner en marcha su inmueble.</li>
+          <li>Visita a la Propiedad para realizar ficha de característica, fotos y videos.</li>
+          <li>Gestión publicitaria y marketing en los portales líderes del mercado</li>
+          <li>Selección del inquilino y visitas al inmueble.</li>
+          <li>Confección de contrato de arrendamiento/opción compra</li>
+          <li>Fianzas / Depósitos extraordinarios</li>
+          <li>Cobro recibos</li>
+          <li>Liquidación mensual al arrendador</li>
+          <li>Gestión de gastos comunes/IBI/incineradora/suministros, etc.</li>
+          <li>Aumento IPC/actualizaciones</li>
+          <li>Confección IVA y resúmenes anuales</li>
+          <li>Certificados a efectos fiscales</li>
+          <li>Mantenimiento del Inmueble, control obras necesarias, servicio averías y urgencias 24hrs</li>
+          <li>Contratación del seguro del inmueble y seguimiento en caso de siniestro</li>
+          <li>Contratación de Suministros</li>
+          <li>Certificado de Eficiencia Energética</li>
+          <li>Asesoramiento Jurídico</li>
+          <li>Desahucio por falta de pago y Reclamación de Cantidad</li>
+          <li>Contratación de Seguro Renta Garantizada</li>
+          <li>Solo recibimos nuestros honorarios si la propiedad produce dividendos. Si usted no gana, nosotros tampoco.
+          </li>
+        </ul>
+      </section>
+    </div>
   </main>
 </body>
 <script>
